--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
             </div>
         </div>
     </header>
+
+    <main class="information">
+        <h1 class="information_title">Some random information.</h1>
+        <div class="cards">
+            <div class="card">
+                <div class="border">
+                </div>
+                <div class="paragraph">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="border">
+                </div>
+                <div class="paragraph">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="border">
+                </div>
+                <div class="paragraph">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="border">
+                </div>
+                <div class="paragraph">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
