--- a/index.html
+++ b/index.html
@@ -65,11 +65,20 @@
                 <div class="border">
                 </div>
                 <div class="paragraph">
-                    <p>this is some subtext under an illustration or image</p>
+                    <p>this is some subtext under an illustration or image </p>
                 </div>
             </div>
         </div>
-    </main>
+    </main><!--.information-->
+
+    <section class="reviews">
+        <div class="testimonial">
+            <p class="testimonial_customer">This is an inspiring quote, or a testimonial from a customer, Maybe it's
+                just filling up space, or maybe
+                people will actually read it. Who knows? All know is that it looks nice.</p>
+            <p class="autor">-Thor, God of Thunder</p>
+        </div>
+    </section><!--.reviews-->
 </body>
 
 </html>
