Add section sign up

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p class="title">This website is awesome</p>
                 <p class="text">This website has some subtext that goes here under the main title. It's a smaller font
                     and the color is lower contrast</p>
-                <button class="button">Sing up</button>
+                <button class="button">Sign up</button>
             </div>
             <div>
                 <img class="image" src="img/image.png" alt="image nice" width="500px" height="260px">
@@ -37,39 +37,41 @@
         </div>
     </header>
 
-    <main class="information">
-        <h1 class="information_title">Some random information.</h1>
-        <div class="cards">
-            <div class="card">
-                <div class="border">
+    <main>
+        <section class="information">
+            <h1 class="information_title">Some random information.</h1>
+            <div class="cards">
+                <div class="card">
+                    <div class="border">
+                    </div>
+                    <div class="paragraph">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
                 </div>
-                <div class="paragraph">
-                    <p>this is some subtext under an illustration or image</p>
+                <div class="card">
+                    <div class="border">
+                    </div>
+                    <div class="paragraph">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="border">
+                    </div>
+                    <div class="paragraph">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="border">
+                    </div>
+                    <div class="paragraph">
+                        <p>this is some subtext under an illustration or image </p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="border">
-                </div>
-                <div class="paragraph">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="border">
-                </div>
-                <div class="paragraph">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="border">
-                </div>
-                <div class="paragraph">
-                    <p>this is some subtext under an illustration or image </p>
-                </div>
-            </div>
-        </div>
-    </main><!--.information-->
+        </section><!--.information-->
+    </main>
 
     <section class="reviews">
         <div class="testimonial">
@@ -79,6 +81,19 @@
             <p class="autor">-Thor, God of Thunder</p>
         </div>
     </section><!--.reviews-->
+
+    <section class="signup">
+        <div class="signup_box">
+            <div>
+                <p class="logo margin_zero">Call to action! It's time!</p>
+                <p class="signup_text margin_zero">Sign up for our product by clicking that button right over
+                    there!</p>
+            </div>
+            <button class="signup_button">Sign up</button>
+        </div>
+    </section><!--.signup-->
+
+
 </body>
 
 </html>
