--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#" class="nav__link">header link two</a>
                 <a href="#" class="nav__link">header link three</a>
             </nav>
-        </div><!--.conteiner-->
+        </div><!--.container-->
         <div class="hero">
             <div class="info">
                 <p class="title">This website is awesome</p>
@@ -93,7 +93,9 @@
         </div>
     </section><!--.signup-->
 
-
+    <footer class="footer">
+        <p class="copyright">Copyright &copy; The Odin Project 2025</p>
+    </footer><!--.footer-->
 </body>
 
 </html>
